Sass file that assigns text colors to Html tags

--- a/0x03-sass_scss/4-nested_class.scss
+++ b/0x03-sass_scss/4-nested_class.scss
@@ -1,5 +1,3 @@
 /* Nested class */
-$tcolor : #3D3D3D ;
-$txcolor : #FF0000 ;
-body {color: $tcolor;}
-body .red { color: $txcolor;}
+body {color: #3D3D3D;}
+body .red { color: #FF0000;}
