--- a/0x02-CSS_advanced/styles/5-style.css
+++ b/0x02-CSS_advanced/styles/5-style.css
@@ -4,7 +4,7 @@ html {
 body {
     color: var(--text-color);
     font-family: var(--font-family-base);
-    font: var(--font-size-medium);
+    font-size: var(--font-size-medium);
 }
 a {
     color: #161616;
@@ -32,7 +32,7 @@ a {
     --font-size-large: 1.8rem;
     --font-size-x-large: 2.3rem;
     --font-size-xx-large: 4.8rem;
-    font: 62.5%;
+    font-size: 62.5%;
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
