--- a/0x02-CSS_advanced/styles/8-style.css
+++ b/0x02-CSS_advanced/styles/8-style.css
@@ -38,8 +38,8 @@ a {
     --font-weight-regular: 400;
     --font-weight-bold: 700;
     --line-height-small: 1.2;
-    --line-height-small: 1.5;
-    --line-height-small: 1.8;
+    --line-height-base: 1.5;
+    --line-height-big: 1.8;
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
