--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -54,7 +54,7 @@ a:active {
     padding: var(--section-header-padding);
 }
 .section-body {
-    padding: var(--section-padding);
+    padding: var(--section-body-padding);
 }
 .section-footer {
     padding: var(--section-footer-padding);
