--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -95,7 +95,7 @@ a:active {
     --nav-item-font-family: var(--font-family-title);
     --nav-item-font-weight: var(--font-weight-bold);
     --nav-item-font-size: var(--font-size-medium);
-    --nav-item-letter-spacing: 4%;
+    --nav-item-letter-spacing: 0.64px;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0;
     --nav-item-link-hover: var(--color-primary);
@@ -113,14 +113,14 @@ h1, h2, h3, h4, h5, h6 {
     float: right;
 }
 .nav {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     list-style-type: none;
     text-align: center;
 }
 .nav .nav-item {
     font-family: var(--nav-item-font-family);
-    font-weight: var(--font-weight-bold);
+    font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
     letter-spacing: var(--nav-item-letter-spacing);
     display: var(--nav-item-display);
@@ -128,7 +128,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .nav .nav-link {
     display: block;
-    padding: 25px 50px;
+    padding: 0.5rem 1rem;
 }
 .nav .nav-link:hover {
     color: var(--nav-item-link-hover);
