--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -139,25 +139,25 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 ul.row {
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
+    margin: 0;
+    padding: 0;
     list-style: none;
 }
 .col-1-3 {
     width: 33.33%;
     float: left;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem;
 }
 .col-1-2 {
     width: 50%;
     float: left;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem;
 }
 .footer-copyright {
-    margin: 0 0 0 0;
+    margin: 0;
     font-size: var(--font-size-small);
     color: var(--text-color);
 }
 footer ul {
-    text-align: left;
+    text-align: right;
 }
