--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -158,6 +158,6 @@ ul.row {
     font-size: var(--font-size-small);
     color: var(--text-color);
 }
-footer ul {
+.footer ul {
     text-align: right;
 }
