--- a/0x02-CSS_advanced/styles/21-style.css
+++ b/0x02-CSS_advanced/styles/21-style.css
@@ -145,13 +145,9 @@ ul.row {
 }
 .col-1-3 {
     width: 33.33%;
-    float: left;
-    padding: 0.5rem;
 }
 .col-1-2 {
     width: 50%;
-    float: left;
-    padding: 0.5rem;
 }
 .footer-copyright {
     margin: 0;
@@ -166,7 +162,7 @@ ul.row {
     display: table;
     clear: both;
 }
-[class^="col-"]:not(col-1-3):not(col-1-2) {
+[class^="col-"] {
     float: left;
     padding: 0.5rem;
 }
