--- a/0x02-CSS_advanced/styles/22-style.css
+++ b/0x02-CSS_advanced/styles/22-style.css
@@ -166,7 +166,7 @@ ul.row {
     float: left;
     padding: 0.5rem;
 }
-[data-section-theme=dark] {
+[data-section-theme="dark"] {
     --text-color: var(--color-white);
     --section-title-color: var(--color-white);
     background-color: var(--color-black);
