--- a/0x02-CSS_advanced/styles/23-style.css
+++ b/0x02-CSS_advanced/styles/23-style.css
@@ -173,7 +173,7 @@ ul.row {
     background-color: var(--color-black);
 }
 .footer-address {
-    color: var(--text-color);
+    fill: var(--text-color);
 }
 .social-link {
     display: block;
