--- a/0x02-CSS_advanced/styles/28-style.css
+++ b/0x02-CSS_advanced/styles/28-style.css
@@ -249,11 +249,11 @@ ul.row {
     padding: var(--header-padding);
 }
 .header-logo {
-    --header-logo: var(--header-logo-position);
+    position: var(--header-logo-position);
 }
 .header-logo a{
     display: var(--header-logo-link-display);
-    position: var(--header-logo-link-display);
+    position: var(--header-logo-link-position);
     top: var(--header-logo-link-top);
     left: var(--header-logo-link-left);
 }
