--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -162,7 +162,8 @@ h1, h2, h3, h4, h5, h6 {
     left: 0;
     background-color: var(--color-white);
     width: 0;
-    height: 2rem;
+    height: 0.2rem;
+    bottom: 0;
 }
 .nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
