--- a/0x02-CSS_advanced/styles/32-style.css
+++ b/0x02-CSS_advanced/styles/32-style.css
@@ -128,7 +128,7 @@ a:active {
     --header-logo-link-position: absolute;
     --header-logo-link-top: -1rem;
     --header-logo-link-left: 0;
-    --transition-duration: 3s;
+    --transition-duration: .3s;
     --transition-cubic-bezier: cubic-bezier(0.17, 0.67, 0, 1.01);
 }
 h1, h2, h3, h4, h5, h6 {
