--- a/0x04-flexbox/9-styles.css
+++ b/0x04-flexbox/9-styles.css
@@ -371,7 +371,7 @@
     flex-wrap: wrap;
   }
   /* Section ABOUT US ============================= */
-  .section-about-us [class^="col-"] {
+  .section-about-us [class*="col-"] {
     align-self: center;
   }
   /*** 4. CARD ***/
