--- a/0x05-form/01-styles.css
+++ b/0x05-form/01-styles.css
@@ -653,12 +653,12 @@ ul.row {
     margin: 10rem 0 0 auto;
     padding-left: 7rem;
 }
-.section-title {
+.post-comments .section-title {
     font-variant: small-caps;
 }
 /* Basic form
     ============================= */
-.form {
+form {
     display: flex;
     flex-direction: column;
     padding: 1rem 0;
