--- a/0x06-responsive_design/07-styles.css
+++ b/0x06-responsive_design/07-styles.css
@@ -165,6 +165,17 @@
     background: var(--color-white);
   }
   
+  @media only screen and (max-width: 480px)  {
+    html {
+  font-size: 57%;
+    }
+}
+  @media only screen and (min-width: 481px) and (max-width: 767px)  {
+    html {
+      font-size: 60%;
+    }
+  }
+  
   /* Helpers
       ============================= */
   
