--- a/0x06-responsive_design/09-styles.css
+++ b/0x06-responsive_design/09-styles.css
@@ -164,6 +164,17 @@
     color: var(--color-primary);
     background: var(--color-white);
   }
+
+  @media only screen and (max-width: 480px)  {
+    html {
+  font-size: 57%;
+    }
+}
+  @media only screen and (min-width: 481px) and (max-width: 767px)  {
+    html {
+      font-size: 60%;
+    }
+  }
   
   /* Helpers
       ============================= */
@@ -379,6 +390,18 @@
   .social-link > svg {
     fill: var(--text-color);
   }
+
+  @media only screen and (max-width: 767px) {
+    :root {
+      --footer-padding: 5rem 2rem 1rem;
+    }
+    .footer .social.nav, .footer .footer-nav {
+      text-align: center;
+    }
+    .social.nav li + li, .footer-nav li + li {
+      padding-left: 2rem;
+    }
+  }
   
   /*** 3. SECTION ***/
   
@@ -575,6 +598,19 @@
   
   .card-work:hover .card-title {
     opacity: 1;
+  }
+
+  @media only screen and (max-width: 767px) {
+    .card-work .card-inner {
+      --text-color : var(--color-white);
+      position: relative;
+    }
+    .card-work .card-title {
+      opacity: 1;
+    }
+    .card-work .card-title a {
+      padding: 2rem 1rem 0 1rem;
+    }
   }
   
   /* Card SERVICES
