--- a/0x06-responsive_design/100-styles.css
+++ b/0x06-responsive_design/100-styles.css
@@ -164,6 +164,17 @@
     color: var(--color-primary);
     background: var(--color-white);
   }
+
+  @media only screen and (max-width: 480px)  {
+    html {
+  font-size: 57%;
+    }
+}
+  @media only screen and (min-width: 481px) and (max-width: 767px)  {
+    html {
+      font-size: 60%;
+    }
+  }
   
   /* Helpers
       ============================= */
@@ -379,6 +390,18 @@
   .social-link > svg {
     fill: var(--text-color);
   }
+
+  @media only screen and (max-width: 767px) {
+    :root {
+      --footer-padding: 5rem 2rem 1rem;
+    }
+    .footer .social.nav, .footer .footer-nav {
+      text-align: center;
+    }
+    .social.nav li + li, .footer-nav li + li {
+      padding-left: 2rem;
+    }
+  }
   
   /*** 3. SECTION ***/
   
@@ -463,6 +486,11 @@
     align-items: flex-start;
     justify-content: center;
     min-height: 35vh;
+  }
+
+  .article-page .section-hero {
+    margin-top: -8.5rem;
+    padding-top: 5rem;
   }
 
     @media only screen and (max-width: 767px) {
@@ -576,6 +604,19 @@
   .card-work:hover .card-title {
     opacity: 1;
   }
+
+  @media only screen and (max-width: 767px) {
+    .card-work .card-inner {
+      --text-color : var(--color-white);
+      position: relative;
+    }
+    .card-work .card-title {
+      opacity: 1;
+    }
+    .card-work .card-title a {
+      padding: 2rem 1rem 0 1rem;
+    }
+  }
   
   /* Card SERVICES
       ============================= */
@@ -674,6 +715,7 @@
   .post {
     display: flex;
     align-items: baseline;
+    margin: 0 2rem;
   }
   
   .post-content {
@@ -702,6 +744,18 @@
     color: var(--color-grey);
     text-align: center;
   }
+
+  @media only screen and (max-width: 767px) {
+    .post {
+      flex-direction: column;
+      margin: 2rem;
+    }
+    .post-content {
+      padding-left: 0;
+    }
+  }
+
+
   
   /* Post Meta
       ============================= */
@@ -763,6 +817,14 @@
   
   .post-comments .section-title {
     font-variant: small-caps;
+  }
+
+  @media only screen and (max-width: 767px) {
+    .post-comments {
+      width: calc(100% - 4rem);
+      margin: 2rem;
+      padding: 0;
+    }
   }
   
   /* Basic form
