--- a/0x07-accessibility/skip-links/01-styles.css
+++ b/0x07-accessibility/skip-links/01-styles.css
@@ -200,6 +200,7 @@ a:active {
     color: var(--color-white);
     left: 0;
     padding: .7rem;
+    position: fixed;
     opacity: 0;
     top: 0;
     z-index: 10;
